tests/parser/bad/exps/exp_t-emp-cid-underscore.scilexp
Emp Uint128 bool (* should be bool *)
